--- a/config/etc/systemd/system/syllabus-worker.service
+++ b/config/etc/systemd/system/syllabus-worker.service
@@ -6,6 +6,7 @@ Wants=redis_6379.service
 After=redis_6379.service
 
 [Service]
+User=apache
 WorkingDirectory=/var/www/syllabus/current
 ExecStart=/bin/bash -lc 'bundle exec rake resque:work QUEUE=syllabus'
 Restart=always
